[package]
name = "xnet-common"
version = "0.1.0"
edition = "2021"

license.workspace = true

[features]
default = []

[dependencies]
bytemuck = { version = "1.14", features = ["derive"] }

# Use aya-ebpf for eBPF targets, aya for regular targets
aya-ebpf = { workspace = true, optional = true }
aya = { workspace = true, optional = true }

[lib]
path = "src/lib.rs"
